switch from Databases to Content Providers, etc.

--- a/config/datasources.yml
+++ b/config/datasources.yml
@@ -34,7 +34,7 @@ datasources:
   #       s.fq[ISSN]: ISSN
 
   articles:
-    name: Articles
+    name: Summon
     search_box:
       route: articles_index_path
       placeholder: Articles
@@ -190,14 +190,14 @@ datasources:
 
 datasource_bar:
   major_sources:
-    - quicksearch
+    # - quicksearch
     # - catalog
     # - databases
     # - journals
     # - archives
     # - new_arrivals
-    - articles
     - eds
+    - articles
     # - academic_commons
     # - library_web
   minor_sources:
