--- a/config/searches.yml
+++ b/config/searches.yml
@@ -121,7 +121,7 @@ sources:
       format: clio
 
   articles:
-    title: Articles
+    title: Summon
     description: Articles, e-books, dissertations, music, images, and more from a mostly full-text database
     warningXX: We are currently experiencing performance problems with this datasource.  We are working with the vendor to resolve this issue.
     render_options:
