--- a/config/permissions.yml
+++ b/config/permissions.yml
@@ -17,6 +17,18 @@ site:
     - shs4
     - witte
 
+scoped_search:
+  manage:
+    - gb8
+    - mem2308
+    - sam119
+    - hhb2119
+    - jrl2132
+    - trd2119
+    - mw18
+    - shs4
+    - witte
+
 item_alerts:
   manage:
       - aj204
