Advanced Scoped Search (multi-field), lots of misc. EDS work

--- a/config/datasources.yml
+++ b/config/datasources.yml
@@ -178,7 +178,7 @@ datasources:
         title: Title
         subject: Subject
         source: Journal Title/Source
-        abstrct: Abstract
+        abstract: Abstract
         issn: ISSN
         isbn: ISBN
       
